test/testdata/classes/instance/not_indexable_error.lox
class Foo {}
Foo()[0]; // error: 'Foo' value is not indexable
